# fyp-llm-library

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: SRS.md  TECHNICAL_DESIGN.md
llm/: LLMWrapper.cpp  LLMWrapper.h
scripts/: download_model.py
vs/LLMLib/: CMakePresets.json  LLMLib.slnx
vs/LLMLib/LLMLib/: LLMLib.cpp  LLMLib.vcxproj  LLMLib.vcxproj.filters
vs/LLMLib/LLMTest/: LLMTest.cpp  LLMTest.vcxproj  LLMTest.vcxproj.filters
